--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ img {max-width:60%; border-radius:16px; box-shadow:0 4px 16px rgba(0,0,0,0.3); m
   <!-- Slide 1 -->
   <div class="slide active" id="slide1">
     <div class="content">
-      <h1>Masukkan PIN </h1>
+      <h1> Masukkan PIN </h1>
       <div class="pin-box">
         <input type="password" maxlength="1" onkeydown="return false;">
         <input type="password" maxlength="1" onkeydown="return false;">
@@ -128,7 +128,7 @@ img {max-width:60%; border-radius:16px; box-shadow:0 4px 16px rgba(0,0,0,0.3); m
         </div>
       </div>
       <div class="error" id="errorMsg"></div>
-      <p style="margin-top:12px; font-size:16px; color:#555;"><i>* Clue: tahun lahir</i></p>
+      <p style="margin-top:12px; font-size:16px; color:#555;"><i>* Clue: tahun lahir dan musiknya harus diplay duluu</i></p>
     </div>
   </div>
 
@@ -387,6 +387,7 @@ animate(); window.addEventListener("resize",()=>{canvas.width=window.innerWidth;
 
 </body>
 </html>
+
 
 
 
